deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-type
  namespace: default

spec:
  replicas: 3
  selector:
    matchLabels:
      app: index-app

  template:
    metadata:
      labels:
        app: index-app

    spec:
      containers:
        - name: container-app
          image: punnam2909/app1:latest
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: deployment-type
  namespace: default

spec:
  type: ClusterIP
  selector:
    app: index-app

  ports:
    - port: 80
      targetPort: 80
